API and behavior across ns-3 releases.

Release 3-dev
============

Availability
------------
This release is not yet available.

Supported platforms
-------------------

New user-visible features
-------------------------
- (network) SimpleChannel allows per-NetDevice blacklists, in order to do hidden terminal testcases.

Bugs fixed
----------
- Bug 1736 - default dot11EDCATableMSDULifetime
- Bug 1929 - TcpL4Protocol::Send must indicate the source address to routing (if known)
- Bug 2126 - LrWpanNetDevice silently accepts no mobility on the node
- Bug 2130 - Allow SimpleChannel to simulate hidden terminals.
- Bug 2135 - TCP doesn't honor the socket's output interface
- Bug 2136 - The usage of tid in wifi and wave module shall be "if (tid > 7)" rather than "if (tid >= 7)"
- Bug 2138 - SimpleNetDevice could send overlapped packets.

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.23
============

Availability
------------
This release is available from:
http://www.nsnam.org/release/ns-allinone-3.23.tar.bz2

Supported platforms
-------------------
This release has been tested on the following platforms:
- Ubuntu 15.04 (64 bit) with g++-4.9.2
- Fedora Core 21 (64 bit) with g++-4.9.2
- Ubuntu 14.04 (64 bit) with g++-4.8.2
- Ubuntu 12.04.4 (32/64 bit) with g++-4.6.3
- CentOS/RHEL 6.6 (64-bit) with g++-4.4.7
- OS X Yosemite 10.10.3 with Xcode 6.3.1 and Apple LLVM version 6.1.0
- FreeBSD 10.1-RELEASE (64 bit) with clang-3.4.1

New user-visible features
-------------------------
- (network) CalculateTxTime has been declared obsolete.
  CalculateBytesTxTime and CalculateBitsTxTime are to be used instead.
  The return value is a Time, instead of a double.
- (mobility) Classes added for converting geographic to cartesian coordinates.
- (spectrum) TvSpectrumTransmitter models added to create television 
  transmitter(s) that transmit PSD spectrums customized by attributes such 